# Renginv4

./: .env-dist  CONTRIBUTING.md  Makefile  install.sh  upnew.php
.github/workflows/: close-issues-on-pr-merge-to-release-branch.yml  ruff.yml
docker/: docker-compose.yml
docker/celery/: Dockerfile  cmseek-pyproject.toml  ctfr-pyproject.toml  entrypoint.sh  eyewitness-pyproject.toml  infoga-pyproject.toml  oneforall-pyproject.toml  pyproject.toml
docker/celery/config/: the-harvester-api-keys.yaml
docker/postgres/: Dockerfile  entrypoint.sh
docker/web/: Dockerfile  entrypoint-dev.sh  pyproject.toml
tests/: test_makefile.py
web/: manage.py
web/api/: consumers.py  middleware.py  permissions.py  serializers.py  urls.py  views.py  ws_urls.py
web/api/tests/: __init__.py  test_endpoint.py  test_ip.py  test_organization.py  test_osint.py  test_project.py  test_scan.py  test_search.py  test_subdomain.py  test_target.py  test_tools.py  test_vulnerability.py
web/commonFilters/templatetags/: custom_filters.py
web/config/: default_yaml_config.yaml
web/config/default_scan_engines/: Initial Scan - Passive (import subdomains).yaml  Initial Scan - Passive with screenshots (common-uncommon ports).yaml  Initial Scan - reNgine recommended.yaml  Internal Network - Port Scan.yaml  Internal Network - Quick Scan.yaml  Internal Network - Service Discovery.yaml  Scan - Active (common ports).yaml  Scan - Active (common-uncommon ports).yaml  Scan - Active (import subdomains - common ports).yaml  Subscan - Fetch URLs.yaml  Subscan - File fuzzing.yaml  Subscan - Port scan.yaml  Subscan - Screenshots.yaml  Subscan - Vulnerabilities.yaml  Subscan - WAF Detection.yaml
web/dashboard/: admin.py  context_processors.py  models.py  urls.py  utils.py  views.py
web/dashboard/migrations/: 0017_userapikey.py
web/dashboard/templates/dashboard/: api_keys.html  index.html  onboarding.html
web/dashboard/tests/: __init__.py  test_dashboard.py
web/fixtures/: external_tools.yaml
web/reNgine/: asgi.py  celery.py  celery_custom_task.py  common_serializers.py  common_views.py  context_processors.py  definitions.py  init.py  middleware.py  routing.py  settings.py  urls.py  validators.py  wsgi.py
web/reNgine/llm/: config.py  llm.py  utils.py  validators.py
web/reNgine/tasks/: __init__.py  command.py  detect.py  dns.py  fuzzing.py  geo.py  http.py  llm.py  notification.py  osint.py  port_scan.py  reporting.py  scan.py  screenshot.py  subdomain.py  url.py  vulnerability.py
web/reNgine/tests/: __init__.py  test_command_encoding.py  test_command_error_handling.py  test_dns_tasks.py  test_dns_utilities.py  test_dns_wrapper.py
web/reNgine/utilities/: command.py  data.py  database.py  distributed_lock.py  dns.py  dns_wrapper.py  endpoint.py  engine.py  external.py  file.py  logging.py  lookup.py  misc.py  notification.py  parser.py  path.py  port.py  proxy.py  subdomain.py  time.py  url.py
web/recon_note/: admin.py  models.py  urls.py  views.py
web/recon_note/migrations/: 0001_initial.py  0002_todonote_project.py
web/recon_note/tests/: __init__.py  test_recon_note.py
web/scanEngine/: admin.py  forms.py  models.py  urls.py  views.py
web/scanEngine/management/commands/: dumpcustomengines.py  loadcustomengines.py  loaddefaultengines.py  updatedefaultengines.py
web/scanEngine/migrations/: 0009_enginetype_scan_type.py
web/scanEngine/templates/scanEngine/: index.html
web/scanEngine/templates/scanEngine/_items/: form_engine.html
web/scanEngine/tests/: __init__.py  test_scan_engine.py
web/startScan/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
web/startScan/migrations/: 0001_initial.py  0005_ipaddress_subscan.py  0022_subscan_engine.py  0027_auto_20220709_0610.py  0032_command.py  0036_alter_ipaddress_geo_iso.py  0037_alter_ipaddress_geo_iso.py  0057_auto_20231201_2354.py  0061_auto_20250216_1450.py
web/startScan/static/startScan/js/: detail_scan.js
web/startScan/templates/organization/: start_scan.html
web/startScan/templates/startScan/: detail_scan.html  history.html  start_multiple_scan_ui.html  start_scan_ui.html
web/startScan/tests/: __init__.py  test_start_scan.py
web/static/assets/css/: app-dark.min.css  app.min.css
web/static/assets/js/: app.min.js
web/static/custom/: custom.css  custom.js
web/targetApp/: admin.py  models.py  urls.py  utilities.py  views.py
web/targetApp/migrations/: 0001_initial.py  0020_auto_20220617_0552.py  0023_auto_20220617_0554.py  0026_auto_20230411_1817.py  0039_domain_project.py  0041_organization_project.py  0042_domain_custom_dns_servers.py
web/targetApp/tests/: __init__.py  test_target_app.py
web/templates/base/: base.html  login.html  logout.html
web/templates/base/_items/: top_bar.html  top_nav.html
web/templates/common/: bad_request.html  server_error.html
web/tests/: test_geo_batch.py  test_geo_performance.py  test_llm.py  test_nmap.py  test_scan.py
web/utils/: test_base.py  test_utils.py
